--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Sims - Coleção</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="Imagens/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="imagens/favicon.ico">
 </head>
 <body>
     <section id="presentation">
@@ -54,7 +54,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="./Imagens/logo_thesims1.png" alt="img">
+                        <img src="./imagens/logo_thesims1.png" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="./Imagens/logo_thesims3.png" alt="img">
+                        <img src="./imagens/logo_thesims3.png" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -87,7 +87,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="./Imagens/logo_thesims4.png" alt="img">
+                        <img src="./imagens/logo_thesims4.png" alt="img">
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
     </footer>
 
     <button id="botao-topo" onclick="voltarParaTopo()">
-        <img src="./Imagens/arrow.png" alt="Símbolo de seta apontando para cima">
+        <img src="./imagens/arrow.png" alt="Símbolo de seta apontando para cima">
     </button>
     <script src="index.js" defer></script>
 
