--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <a href="https://pt.wikipedia.org/wiki/The_Sims#The_Sims_(2000)"><img src="./Imagens/logo_thesims2.png" alt="img"/></a>
+                        <img src="./imagens/logo_thesims2.png" alt="img"/>
                     </div>
                 </div> 
                 <div class="project-item">
